removed redundant variables

--- a/generate.ipynb
+++ b/generate.ipynb
@@ -39,10 +39,8 @@
     "    \"\"\"\n",
     "    kmin *= 2*np.pi\n",
     "    kmax *= 2*np.pi\n",
-    "    kx = np.fft.fftfreq(N, d=1./N) * 2*np.pi\n",
-    "    ky = np.fft.fftfreq(N, d=1./N) * 2*np.pi\n",
-    "    kz = np.fft.fftfreq(N, d=1./N) * 2*np.pi\n",
-    "    KS = np.meshgrid(kx, ky, kz, indexing=\"ij\")\n",
+    "    k = np.fft.fftfreq(N, d=1./N) * 2*np.pi\n",
+    "    KS = np.meshgrid(k, k, k, indexing=\"ij\")\n",
     "    (KX, KY, KZ) = KS\n",
     "    K = np.sqrt(KX**2 + KY**2 + KZ**2)\n",
     "    mask = K > 0\n",
